01-04/saa-01-04-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  Prefix:
    Type: String
    Default: saa-01-04
    
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-windows-latest/Windows_Server-2019-Japanese-Full-Base
    
  InstanceType:
    Type: String
    Default: t3.nano
    
    
Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Prefix}-SecurityGroup
      GroupDescription: Allow ICMP, SMB, CIFS and RDP.
      VpcId:
        Fn::ImportValue: !Sub ${Prefix}-VPC
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # allow SMB(tcp)
          FromPort: 137
          ToPort: 139
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp # allow SMB(udp)
          FromPort: 137
          ToPort: 139
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # allow CIFS
          FromPort: 445
          ToPort: 445
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # allow RDP
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
          
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId:
            Fn::ImportValue: !Sub ${Prefix}-PublicSubnet
          GroupSet:
            - !Ref SecurityGroup
            
            
Outputs:
  SecurityGroup:
    Value: !Ref SecurityGroup
    Export:
      Name: !Sub ${Prefix}-SecurityGroup
